--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
-// {
+{
+    "python.pythonPath": "C:\\Users\\Maruf\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe"
+} // {
 //     "python.pythonPath": "C:\\Users\\Maruf\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe",
 //     "files.autoSave": "onFocusChange",
 //     "editor.formatOnSave": true,
