Blood Bank Got it's Back-End

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "C:\\Users\\Maruf\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe"
+    "python.pythonPath": "C:\\Users\\Masum Mollik\\AppData\\Local\\Programs\\Python\\Python37\\python.exe"
 } // {
 //     "python.pythonPath": "C:\\Users\\Maruf\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe",
 //     "files.autoSave": "onFocusChange",
